--- a/fivemenu/src/style.scss
+++ b/fivemenu/src/style.scss
@@ -4,72 +4,56 @@
  *
  * Replace them with your own styles or remove the file completely.
  */
+ .menuContainer {
+  display: flex;
+}
+.menuContainer {
+  width: 100%; /* Adjust the width as needed */
+}
 
+.menuContainer > div {
+  width: 50%; /* Each table container takes 50% of the .scrollwrapper width */
+  overflow-x: auto; /* Allow horizontal scrolling for each container */
+  white-space: nowrap;
+}
+ .scrollwrapper {
+  overflow-x: auto;
+    white-space: nowrap;
+}
 .wp-block-create-block-fivemenu {
-	background-color: #000000;
-	color: #000000;
+	background-color: #ffffff;
+	// color: #000000;
 	padding: 2px;
-	
+  width: 100%;
+  height: 100%;
 }
 .menu-table {
-	width: 100%;
+	// width: 100%;
+  height: 100%;
+  min-width: 100%;
 	// border-collapse: collapse;
 	// border: 2px solid #000;
   background-color: black;
+  // // // table-layout: fixed;
   }
   
   /* Style for the category cells */
   .menu-category {
 	width: 100%;
+  height: 50%;
+  // table-layout: fixed;
 	// border: 1px solid #000;
-  background-color: black;
-  color: gold;
+  // background-color: black;
+  // color: gold;
   }
-  .menu-category {
-    width: 100%;
-    // border: 1px solid #000;
-    background-color: black;
-    color: gold;
-    }
-  
+
   /* Style for the category names */
   .menu-category strong {
 	display: block;
-	text-align: center;
-	background-color: black;
+	// background-color: black;
 	font-size: 1.2rem;
 	// padding: 5px;
-  color: gold;
+  // color: gold;
   }
   
-  /* Style for the unordered lists */
-  .menu-category ul {
 
-  }
-  
-  /* Style for the list items */
-  .menu-category li {
-	
-  }
-  
-  /* Additional custom styles for each section */
-  /* You can add more styles as needed */
-  .category1 {
-	color: #ff0000; /* Red font color */
-  }
-  
-  .category2 {
-	color: #00ff00; /* Green font color */
-  }
-  
-  .category3 {
-	color: #0000ff; /* Blue font color */
-  }
-  
-  .category4 {
-	color: #ff8000; /* Orange font color */
-  }
-  
-  .category5 {
-	color: #8000ff; /* Purple font color */
-  }
