--- a/fivemenu/src/style.scss
+++ b/fivemenu/src/style.scss
@@ -61,6 +61,8 @@
   .menu-category {
 	width: 100%;
   height: 50%;
+  vertical-align: top;
+  
   // table-layout: fixed;
 	// border: 1px solid #000;
   // background-color: black;
